# sparkl-router

./: .gitignore  Cargo.toml  README.md  config.example.toml
abi/: ProviderRegistry.json  SettlementEscrow.json
docs/: spec.md
scripts/: set-record-usage-role.sh
scripts/lib/: onchain-common.sh
src/: admin.rs  config.rs  lib.rs  main.rs  metrics.rs  node_auth.rs  protocol.rs  routes.rs  state.rs
src/capacity/: mod.rs
src/chain/: mod.rs  record_usage_key.rs  registry.rs  session.rs  usage.rs  watcher.rs
src/consumer/: activate.rs  bearer.rs  catalog.rs  forward.rs  metering.rs  middleware.rs  mod.rs  models.rs  offerings.rs  sse.rs  usage_batch.rs
src/status/: mod.rs  nodes.rs  subscribe.rs
src/telemetry/: mod.rs
src/tunnel/: connect.rs  dispatch.rs  lifecycle.rs  mod.rs  registry.rs
tests/: integration_tunnel.rs  mock_node.rs
