[package]
name = "sparkl-router"
version = "0.1.0"
edition = "2021"
description = "Sparkl API router: consumer HTTPS/SSE and provider WSS tunnels"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sparkl-router"
path = "src/main.rs"

[dependencies]
anyhow = "1"
alloy = { version = "2.0.4", default-features = false, features = [
    "provider-http",
    "contract",
    "reqwest",
    "reqwest-rustls-tls",
    "rpc-types",
    "sol-types",
    "signer-local",
] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
alloy-primitives = { version = "1.5.7", default-features = false, features = ["std"] }
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.22"
bs58 = "0.5"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dashmap = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1"
sha2 = "0.10"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
moka = { version = "0.12", features = ["future"] }
rand = "0.8"
secp256k1 = { version = "0.31.1", default-features = false, features = [
    "recovery",
    "global-context",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
tempfile = "3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
toml = "0.8"
